index.css
body {
  font-family: Arial, Helvetica, sans-serif;
  background-color: hsl(0, 0%, 97%);
  margin: 0;
  padding: 0;
}

main {
  display: flex;
  text-align: center;

  justify-content: center;
  flex-direction: column;
  padding: 2em;
  /* width: 75%; */
  margin: auto;

  max-width: 1200px;
  background-color: white;
  border-radius: 1rem;
  margin-top: 3rem;
}

.heroTitle {
  font-size: clamp(1rem, 4vw, 7rem);
  margin-top: 0;
}

.swishIcon {
  width: 50%;
  margin: auto;
  padding: 1rem;
}

img {
  max-width: 100%;
}

